style fixes. added .b-portfolio_limit class. increase last portfolio list limit. fixed reviews count.

--- a/src/blocks/b-clients/b-clients.less
+++ b/src/blocks/b-clients/b-clients.less
@@ -179,6 +179,10 @@
 .b-clients__head_small {
     .my-heading-h2();
     text-align: center;
+
+    @media (min-width: @screen-xl-min) {
+        margin-bottom: 65px;
+    }
 }
 
 .b-clients__lead {
