--- a/src/blocks/b-number-badge/b-number-badge.less
+++ b/src/blocks/b-number-badge/b-number-badge.less
@@ -55,3 +55,11 @@
         border-radius: 62px;
     }
 }
+
+.b-number-badge__inner_inverse {
+    transform: rotate(-10.29deg);
+
+    &:hover, &:active, &:focus {
+        transform: scale(1.05) rotate(-10.29deg);
+    }
+}
