--- a/src/blocks/b-reviews/b-reviews.less
+++ b/src/blocks/b-reviews/b-reviews.less
@@ -194,6 +194,10 @@
 .b-reviews__head_small {
     .my-heading-h2();
     text-align: center;
+
+    @media (min-width: @screen-xl-min) {
+        margin-bottom: 65px;
+    }
 }
 
 .b-reviews__lead {
