--- a/src/templates/index.jade
+++ b/src/templates/index.jade
@@ -118,9 +118,9 @@ block content
                     a.btn.btn-success.btn-lg.b-splash-prices__button(href='prices.html') Посмотреть все тарифы
         .b-reviews__container.b-reviews__container_faded
             .container
-                h2.b-reviews__head Отзывы клиентов
+                h2.b-reviews__head.b-reviews__head_small Посмотрите #[div.b-number-badge #[a.b-number-badge__inner.b-number-badge__inner_inverse(href="reviews.html") 204]] отзыва
 
-                p.b-reviews__lead Возможно они расскажут о нашей работе что-то более важное и близкое вам
+                p.b-reviews__lead Возможно они расскажут о нашей работе<br>что-то более важное и близкое вам
 
             .b-reviews__list.b-reviews__list_faded
                 a.b-reviews__item.emerge.b-reviews__item_type_video(data-effect="relax", data-origin="top", data-expose="true", href='review.html')
@@ -212,7 +212,7 @@ block content
                         a.btn.btn-info.g-loader__link(href='reviews.html') Все отзывы
         .b-clients__container
             .container
-                h2.b-clients__head Клиенты
+                h2.b-clients__head.b-clients__head_small Доверие #[div.b-number-badge #[a.b-number-badge__inner(href="clients.html") 84]] клиентов
 
                 p.b-clients__lead Самые лучшие люди и компании. Будем рады вас видеть в этом списке.
 
