Portfolio: fixed sized page. new portfolio view for review page. cases: fixed gradient height.

--- a/src/blocks/b-cases/b-cases.less
+++ b/src/blocks/b-cases/b-cases.less
@@ -231,8 +231,8 @@
     right: 0;
     bottom: 0;
 
-    height: 465px;
-    max-height: 100%;
+    height: auto;
+    max-height: 70%;
     min-height: 30%;
 
     border-radius: 20px;
@@ -241,9 +241,11 @@
     align-items: flex-end;
 
     padding: 30px;
+    padding-top: 100px;
 
     @media (min-width: @screen-lg-min) {
         padding: 50px;
+        padding-top: 120px;
     }
 
     &:before, &:after {
