--- a/src/blocks/b-portfolio-preview/b-portfolio-preview.less
+++ b/src/blocks/b-portfolio-preview/b-portfolio-preview.less
@@ -10,6 +10,12 @@
     position: relative;
 }
 
+.b-portfolio-preview_no_margin {
+    .fancybox-container {
+        padding: 0;
+    }
+}
+
 .b-portfolio-preview.loading:after {
     content: '';
     width: 100px;
