--- a/src/blocks/b-number-badge/b-number-badge.less
+++ b/src/blocks/b-number-badge/b-number-badge.less
@@ -27,7 +27,6 @@
     margin: 0 10px;
 
     font-weight: 900;
-    font-size: 105.805px;
     line-height: 1.2;
     /* identical to box height */
     letter-spacing: 0.05em;
@@ -47,8 +46,18 @@
         color: #FFFFFF;
     }
 
-    font-size: 80px;
-    border-radius: 55px;
+    font-size: 50px;
+    border-radius: 40px;
+
+    @media (min-width: @screen-md-min) {
+        font-size: 65px;
+        border-radius: 45px;
+    }
+
+    @media (min-width: @screen-lg-min) {
+        font-size: 80px;
+        border-radius: 55px;
+    }
 
     @media (min-width: @screen-xl-min) {
         font-size: 105.805px;
