--- a/src/blocks/b-portfolio/b-portfolio.less
+++ b/src/blocks/b-portfolio/b-portfolio.less
@@ -43,28 +43,22 @@
 .b-portfolio__filter {
 }
 
-@portfolio-breakpoint: @screen-md-min;
+@portfolio-breakpoint: (@screen-md-min + 20px);
 @portfolio-width-small: 160px;
 @portfolio-width-big: 224px;
 
 .b-portfolio__list {
-    margin: 0 auto;
+    margin: 0 @grid-gutter-width/2-5px;
     text-align: center;
     padding-bottom: 20px;
 
-    max-width: @portfolio-width-small * 2;
-
-    @media (min-width: 480px) {
-        max-width: @portfolio-width-small * 3;
-    }
-    @media (min-width: 640px) {
-        max-width: @portfolio-width-small * 4;
-    }
+    max-width: none;
 
     @portfolio-width: @portfolio-width-big;
 
     @media (min-width: @portfolio-breakpoint) {
         max-width: @portfolio-width * 3;
+        margin: 0 auto;
     }
     @media (min-width: 896px) {
         max-width: @portfolio-width * 4;
@@ -125,10 +119,6 @@
 .portfolio-width-loop(@n, @i: 1) when (@i =< @n) {
     .b-portfolio__list_width_@{i} {
 
-        @media (max-width: @portfolio-breakpoint) and (min-width: (@portfolio-width-small * @i)) {
-            max-width: @portfolio-width-small * @i;
-        }
-
         @media (min-width: @portfolio-breakpoint) and (min-width: (@portfolio-width-big * @i)) {
             max-width: @portfolio-width-big * @i;
         }
@@ -163,18 +153,25 @@
 
 .b-portfolio__item {
     display: inline-block;
-    width: 150px;
-    height: 150px;
+    width: ~"calc(50% - 10px)";
+    height: auto;
     margin: 5px;
+    padding-bottom: ~"calc(50% - 10px)";
 
     transition: opacity 500ms ease-out, transform 500ms cubic-bezier(0, 0, 0.001, 1);
     opacity: 0;
     transform: scaleY(.92);
 
+    @media (min-width: @screen-sm-min) {
+        width: ~"calc(100%/3*1 - 10px)";
+        padding-bottom: ~"calc(100%/3*1 - 10px)";
+    }
+
     @media (min-width: @portfolio-breakpoint) {
         width: 204px;
         height: 204px;
         margin: 10px;
+        padding-bottom: 0;
     }
 
     position: relative;
@@ -198,10 +195,10 @@
 .b-portfolio__item_width_2 {
     @size: 150px*2 + 10px;
 
-    width: @size;
+    width: ~"calc(100% - 10px)";
 
-    .b-portfolio__image, .b-portfolio__video {
-        max-width: @size;
+    @media (min-width: @screen-sm-min) {
+        width: ~"calc(100%/3*2 - 10px)";
     }
 
     @media (min-width: @portfolio-breakpoint) {
@@ -218,16 +215,18 @@
 .b-portfolio__item_height_2 {
     @size: 150px*2 + 10px;
 
-    height: @size;
+    height: auto;
+    padding-bottom: ~"calc(100% - 10px)";
 
-    .b-portfolio__image, .b-portfolio__video {
-        max-height: @size;
+    @media (min-width: @screen-sm-min) {
+        padding-bottom: ~"calc(100%/3*2 - 10px)";
     }
 
     @media (min-width: @portfolio-breakpoint) {
         @size: 204px*2 + 20px;
 
         height: @size;
+        padding-bottom: 0;
 
         .b-portfolio__image, .b-portfolio__video {
             max-height: @size;
@@ -238,16 +237,18 @@
 .b-portfolio__item_height_3 {
     @size: 150px*3 + 10px*2;
 
-    height: @size;
+    height: auto;
+    padding-bottom: ~"calc(150% - 10px)";
 
-    .b-portfolio__image, .b-portfolio__video {
-        max-height: @size;
+    @media (min-width: @screen-sm-min) {
+        padding-bottom: ~"calc(100%/3*3 - 10px)";
     }
 
     @media (min-width: @portfolio-breakpoint) {
         @size: 204px*3 + 20px*2;
 
         height: @size;
+        padding-bottom: 0;
 
         .b-portfolio__image, .b-portfolio__video {
             max-height: @size;
@@ -258,12 +259,18 @@
 .b-portfolio__image, .b-portfolio__video {
     border-radius: 15px;
 
-    max-width: 150px;
-    max-height: 150px;
+    max-width: 100%;
+    max-height: 100%;
+
+    width: 100%;
+    height: 100%;
 
     @media (min-width: @portfolio-breakpoint) {
         max-width: 204px;
         max-height: 204px;
+
+        width: auto;
+        height: auto;
     }
 
     position: absolute;
