increase review view image size.

--- a/src/blocks/b-review-image/b-review-image.less
+++ b/src/blocks/b-review-image/b-review-image.less
@@ -52,7 +52,7 @@
 
     width: ~"var(--real-frame-width)";
     height: ~"var(--real-frame-height)";
-    background-size: ~"var(--real-frame-width)";
+    background-size: 100% 100%;
 
     padding-left: ~"calc(var(--real-frame-width) * var(--frame-left-border) / var(--frame-width))";
     padding-right: ~"calc(var(--real-frame-width) * var(--frame-right-border) / var(--frame-width))";
