Cases: added {client_image} to title.

--- a/src/blocks/b-cases/b-cases.less
+++ b/src/blocks/b-cases/b-cases.less
@@ -292,3 +292,14 @@
         line-height: 36px;
     }
 }
+
+.b-cases__title-img {
+    display: inline-block;
+    max-height: 25px;
+    position: relative;
+    top: -2px;
+
+    @media (min-width: @screen-lg-min) {
+        max-height: 36px;
+    }
+}
