revert b-portfolio_limit height size. changed way to get embed content for portfolio tag (added ?embed=1 param).

--- a/src/blocks/b-portfolio/b-portfolio.less
+++ b/src/blocks/b-portfolio/b-portfolio.less
@@ -375,11 +375,11 @@
         max-height: 2376px;
     }
 
-    //@media (min-width: @screen-lg-min) {
-    //    max-height: 3168px;
-    //}
-    //
-    //@media (min-width: @screen-xl-min) {
-    //    max-height: 3960px;
-    //}
+    @media (min-width: @screen-lg-min) {
+        max-height: 3168px;
+    }
+
+    @media (min-width: @screen-xl-min) {
+        max-height: 3960px;
+    }
 }
