IMPORTANT:  - gulp upgraded to 4 version.  - added tailwind.

--- a/src/templates/includes/head.jade
+++ b/src/templates/includes/head.jade
@@ -18,6 +18,7 @@ head
         link(rel='stylesheet', href='assets/vendor/jquery.scrollbar/jquery.scrollbar.css')
         link(rel='stylesheet', href='assets/vendor/swiper/dist/css/swiper.min.css')
         link(rel='stylesheet', href='assets/css/common.min.css')
+        link(rel='stylesheet', href='assets/css/main.min.css')
 
     block scripts
         script(src='assets/vendor/jquery/dist/jquery.min.js')
