via.placeholder.com -> dummyimage.com

--- a/src/templates/blog_item.jade
+++ b/src/templates/blog_item.jade
@@ -47,42 +47,42 @@ block content
                     p Выберите подходящие настройки показов на тематических площадках. Укажите долю бюджета кампании, которую вы готовы тратить на переходы с сайтов-партнеров «Яндекса». Учитывайте особенности вашего бизнеса и тематику объявлений. Например, для продавцов пиццы с доставкой предпочтительнее привлекать транзакционный трафик со страницы выдачи. А продавцам сложных и дорогих продуктов лучше сделать акцент на трафике с тематических сайтов, на которых аудитория ищет информацию в ходе потребительского путешествия.
 
                     .text-center
-                        img(src='https://via.placeholder.com/530x410')
+                        img(src='https://dummyimage.com/530x410')
                     p С 13 по 16 апреля сайт ни разу не занимал одинаковую позицию. 15 апреля в топ вошли сайты #[a(href='#') zarplatawmz.ru] и dolinacoda.ru. Первый 16 апреля из топа исчез, а второй там удержался. 16 апреля «Яндекс» показывал в выдаче по выбранному запросу блок с видео.
                     .b-content-grid
                         .b-content-grid__item
                             .b-content-grid__image
-                                img.img-responsive(src='https://via.placeholder.com/200x200', alt='')
+                                img.img-responsive(src='https://dummyimage.com/200x200', alt='')
                             h4.b-content-grid__title Lorem ipsum dolor sit amet
                             .b-content-grid__text
                                 p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed libero turpis, sodales at diam sit amet, ullamcorper viverra quam. Nam placerat, augue a blandit ultrices
                         .b-content-grid__item
                             .b-content-grid__image
-                                img.img-responsive(src='https://via.placeholder.com/200x200', alt='')
+                                img.img-responsive(src='https://dummyimage.com/200x200', alt='')
                             h4.b-content-grid__title Lorem ipsum dolor sit amet
                             .b-content-grid__text
                                 p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed libero turpis, sodales at diam sit amet, ullamcorper viverra quam. Nam placerat, augue a blandit ultrices, felis sem viverra dui, fringilla blandit erat diam ut nulla. Interdum et malesuada fames ac ante ipsum primis in faucibus. Morbi sed ipsum nec dui tincidunt fermentum ac sed risus.
                         .b-content-grid__item
                             .b-content-grid__image
-                                img.img-responsive(src='https://via.placeholder.com/200x200', alt='')
+                                img.img-responsive(src='https://dummyimage.com/200x200', alt='')
                             h4.b-content-grid__title Lorem ipsum dolor sit amet
                             .b-content-grid__text
                                 p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed libero turpis, sodales at diam sit amet, ullamcorper viverra quam. Nam placerat, augue a blandit ultrices
                         .b-content-grid__item
                             .b-content-grid__image
-                                img.img-responsive(src='https://via.placeholder.com/200x200', alt='')
+                                img.img-responsive(src='https://dummyimage.com/200x200', alt='')
                             h4.b-content-grid__title Lorem ipsum dolor sit amet
                             .b-content-grid__text
                                 p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed libero turpis, sodales at diam sit amet, ullamcorper viverra quam. Nam placerat, augue a blandit ultrices
                         .b-content-grid__item
                             .b-content-grid__image
-                                img.img-responsive(src='https://via.placeholder.com/200x200', alt='')
+                                img.img-responsive(src='https://dummyimage.com/200x200', alt='')
                             h4.b-content-grid__title Lorem ipsum dolor sit amet
                             .b-content-grid__text
                                 p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed libero turpis, sodales at diam sit amet, ullamcorper viverra quam. Nam placerat, augue a blandit ultrices, felis sem viverra dui, fringilla blandit erat diam ut nulla. Interdum et malesuada fames ac ante ipsum primis in faucibus. Morbi sed ipsum nec dui tincidunt fermentum ac sed risus.
                         .b-content-grid__item
                             .b-content-grid__image
-                                img.img-responsive(src='https://via.placeholder.com/200x200', alt='')
+                                img.img-responsive(src='https://dummyimage.com/200x200', alt='')
                             h4.b-content-grid__title Lorem ipsum dolor sit amet
                             .b-content-grid__text
                                 p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed libero turpis, sodales at diam sit amet, ullamcorper viverra quam. Nam placerat, augue a blandit ultrices
@@ -95,7 +95,7 @@ block content
                         a.b-gallery__item(href='http://farm8.staticflickr.com/7367/16426879675_e32ac817a8_b.jpg', rel='gallery_1', title='Codirosso spazzacamino (Massimo Greco _Foligno)'): img.b-gallery__image(src='http://farm8.staticflickr.com/7367/16426879675_e32ac817a8_m.jpg', alt='')
                         a.b-gallery__item(href='http://farm8.staticflickr.com/7367/16426879675_e32ac817a8_b.jpg', rel='gallery_1', title='Codirosso spazzacamino (Massimo Greco _Foligno)'): img.b-gallery__image(src='http://farm8.staticflickr.com/7367/16426879675_e32ac817a8_m.jpg', alt='')
                     .b-gallery
-                        a.b-gallery__item(href='https://via.placeholder.com/2000x500', rel='gallery_2', title='Gallery 2'): img.b-gallery__image(src='http://farm6.staticflickr.com/5444/17679973232_568353a624_m.jpg', alt='')
+                        a.b-gallery__item(href='https://dummyimage.com/2000x500', rel='gallery_2', title='Gallery 2'): img.b-gallery__image(src='http://farm6.staticflickr.com/5444/17679973232_568353a624_m.jpg', alt='')
                         a.b-gallery__item(href='http://farm8.staticflickr.com/7367/16426879675_e32ac817a8_b.jpg', rel='gallery_2', title='Gallery 2 (Massimo Greco _Foligno)'): img.b-gallery__image(src='http://farm8.staticflickr.com/7367/16426879675_e32ac817a8_m.jpg', alt='')
                         a.b-gallery__item(href='http://farm8.staticflickr.com/7367/16426879675_e32ac817a8_b.jpg', rel='gallery_2', title='Codirosso spazzacamino (Massimo Greco _Foligno)'): img.b-gallery__image(src='http://farm8.staticflickr.com/7367/16426879675_e32ac817a8_m.jpg', alt='')
                         a.b-gallery__item(href='http://farm8.staticflickr.com/7367/16426879675_e32ac817a8_b.jpg', rel='gallery_2', title='Codirosso spazzacamino (Massimo Greco _Foligno)'): img.b-gallery__image(src='http://farm8.staticflickr.com/7367/16426879675_e32ac817a8_m.jpg', alt='')
