--- a/src/templates/cases.jade
+++ b/src/templates/cases.jade
@@ -10,9 +10,9 @@ block content
                 each i, index in (new Array(9))
                     a.b-cases__item(href='#')
                         .b-cases__media
-                            img.b-cases__image.b-cases__image_horizontal(src='https://via.placeholder.com/1920x1080', alt='')
-                            img.b-cases__image.b-cases__image_square(src='https://via.placeholder.com/1080x1080', alt='')
-                            img.b-cases__image.b-cases__image_vertical(src='https://via.placeholder.com/1080x1920', alt='')
+                            img.b-cases__image.b-cases__image_horizontal(src='https://dummyimage.com/1920x1080', alt='')
+                            img.b-cases__image.b-cases__image_square(src='https://dummyimage.com/1080x1080', alt='')
+                            img.b-cases__image.b-cases__image_vertical(src='https://dummyimage.com/1080x1920', alt='')
 
                             if index % 2
                                 span.js-cases-cover-video.js-cases-cover-video_horizontal(data-src="assets/img/1920x1080.mp4", data-ratio="horizontal")
