--- a/src/templates/offer.jade
+++ b/src/templates/offer.jade
@@ -9,9 +9,9 @@ block content
 
             .b-offer
                 .b-offer__cover
-                    img.img-responsive.b-offer__image.hidden-xs.hidden-sm(src='https://via.placeholder.com/1000x300')
-                    img.img-responsive.b-offer__image.visible-xs(src='https://via.placeholder.com/500x300')
-                    img.img-responsive.b-offer__image.visible-sm(src='https://via.placeholder.com/800x300')
+                    img.img-responsive.b-offer__image.hidden-xs.hidden-sm(src='https://dummyimage.com/1000x300')
+                    img.img-responsive.b-offer__image.visible-xs(src='https://dummyimage.com/500x300')
+                    img.img-responsive.b-offer__image.visible-sm(src='https://dummyimage.com/800x300')
 
                     .b-offer__properties.b-offer-properties
                         .b-offer-properties__item
@@ -29,7 +29,7 @@ block content
                     p JivoSite умеет сохранять историю преписки в карточку клиента в вашей CRM, а так же показывать информацию о клиенте из CRM в приложении оператора. А еще вы можете сделать свое решение с помощью API JivoSite.
 
                     .text-center
-                        img(src='https://via.placeholder.com/550x370')
+                        img(src='https://dummyimage.com/550x370')
                     h4 Узнайте, как Ваши клиенты оценивают качество работы сотрудников
                     p В ходе диалога, клиент может оценить качество обслуживания - положительно или отрицательно. Вы можете получить отчет по оценкам, выставленным клиентами, в личном кабинете.
 
