--- a/src/templates/prices.jade
+++ b/src/templates/prices.jade
@@ -240,9 +240,9 @@ block content
                     p.b-price-modal__title Примеры html5 и флеш-баннеров#[br]по тарифу #[span.b-price-modal__name «Эконом»]
 
                     .b-price-modal__list
-                        .b-price-modal__item: img.b-price-modal__image.img-responsive(src='https://via.placeholder.com/728x90')
-                        .b-price-modal__item: img.b-price-modal__image.img-responsive(src='https://via.placeholder.com/728x90')
-                        .b-price-modal__item: img.b-price-modal__image.img-responsive(src='https://via.placeholder.com/728x90')
+                        .b-price-modal__item: img.b-price-modal__image.img-responsive(src='https://dummyimage.com/728x90')
+                        .b-price-modal__item: img.b-price-modal__image.img-responsive(src='https://dummyimage.com/728x90')
+                        .b-price-modal__item: img.b-price-modal__image.img-responsive(src='https://dummyimage.com/728x90')
                     .b-price-modal__footer
                         .b-price-modal__features
                             p.b-price-modal__feature — Простая анимация;
@@ -257,9 +257,9 @@ block content
                     p.b-price-modal__title Примеры html5 и флеш-баннеров#[br]по тарифу #[span.b-price-modal__name «Стандарт»]
 
                     .b-price-modal__list
-                        .b-price-modal__item: img.b-price-modal__image.img-responsive(src='https://via.placeholder.com/728x90')
-                        .b-price-modal__item: img.b-price-modal__image.img-responsive(src='https://via.placeholder.com/728x90')
-                        .b-price-modal__item: img.b-price-modal__image.img-responsive(src='https://via.placeholder.com/728x90')
+                        .b-price-modal__item: img.b-price-modal__image.img-responsive(src='https://dummyimage.com/728x90')
+                        .b-price-modal__item: img.b-price-modal__image.img-responsive(src='https://dummyimage.com/728x90')
+                        .b-price-modal__item: img.b-price-modal__image.img-responsive(src='https://dummyimage.com/728x90')
                     .b-price-modal__footer
                         .b-price-modal__features
                             p.b-price-modal__feature — Простая анимация;
@@ -274,9 +274,9 @@ block content
                     p.b-price-modal__title Примеры html5 и флеш-баннеров#[br]по тарифу #[span.b-price-modal__name «Премиум»]
 
                     .b-price-modal__list
-                        .b-price-modal__item: img.b-price-modal__image.img-responsive(src='https://via.placeholder.com/728x90')
-                        .b-price-modal__item: img.b-price-modal__image.img-responsive(src='https://via.placeholder.com/728x90')
-                        .b-price-modal__item: img.b-price-modal__image.img-responsive(src='https://via.placeholder.com/728x90')
+                        .b-price-modal__item: img.b-price-modal__image.img-responsive(src='https://dummyimage.com/728x90')
+                        .b-price-modal__item: img.b-price-modal__image.img-responsive(src='https://dummyimage.com/728x90')
+                        .b-price-modal__item: img.b-price-modal__image.img-responsive(src='https://dummyimage.com/728x90')
                     .b-price-modal__footer
                         .b-price-modal__features
                             p.b-price-modal__feature — Сложная анимация с #[b «вау-эффектом»];
@@ -292,9 +292,9 @@ block content
                     p.b-price-modal__title Примеры гиф-баннеров по тарифу #[span.b-price-modal__name «Мини»]
 
                     .b-price-modal__list
-                        .b-price-modal__item: img.b-price-modal__image.img-responsive(src='https://via.placeholder.com/728x90')
-                        .b-price-modal__item: img.b-price-modal__image.img-responsive(src='https://via.placeholder.com/728x90')
-                        .b-price-modal__item: img.b-price-modal__image.img-responsive(src='https://via.placeholder.com/728x90')
+                        .b-price-modal__item: img.b-price-modal__image.img-responsive(src='https://dummyimage.com/728x90')
+                        .b-price-modal__item: img.b-price-modal__image.img-responsive(src='https://dummyimage.com/728x90')
+                        .b-price-modal__item: img.b-price-modal__image.img-responsive(src='https://dummyimage.com/728x90')
                     .b-price-modal__footer
                         .b-price-modal__features
                             p.b-price-modal__feature — #[b Простые] кнопки, очень маленькие баннеры, а также несложная анимация;
@@ -307,9 +307,9 @@ block content
                     p.b-price-modal__title Примеры гиф-баннеров#[br]по тарифу #[span.b-price-modal__name «Бизнес»]
 
                     .b-price-modal__list
-                        .b-price-modal__item: img.b-price-modal__image.img-responsive(src='https://via.placeholder.com/728x90')
-                        .b-price-modal__item: img.b-price-modal__image.img-responsive(src='https://via.placeholder.com/728x90')
-                        .b-price-modal__item: img.b-price-modal__image.img-responsive(src='https://via.placeholder.com/728x90')
+                        .b-price-modal__item: img.b-price-modal__image.img-responsive(src='https://dummyimage.com/728x90')
+                        .b-price-modal__item: img.b-price-modal__image.img-responsive(src='https://dummyimage.com/728x90')
+                        .b-price-modal__item: img.b-price-modal__image.img-responsive(src='https://dummyimage.com/728x90')
                     .b-price-modal__footer
                         .b-price-modal__features
                             p.b-price-modal__feature — #[b Крутые] гиф-баннеры, которые подойдут для рекламы любого проекта,#[br]а также для размещения на любой площадке;
@@ -322,9 +322,9 @@ block content
                     p.b-price-modal__title Примеры гиф-баннеров#[br]по тарифу #[span.b-price-modal__name «Анимация+»]
 
                     .b-price-modal__list
-                        .b-price-modal__item: img.b-price-modal__image.img-responsive(src='https://via.placeholder.com/728x90')
-                        .b-price-modal__item: img.b-price-modal__image.img-responsive(src='https://via.placeholder.com/728x90')
-                        .b-price-modal__item: img.b-price-modal__image.img-responsive(src='https://via.placeholder.com/728x90')
+                        .b-price-modal__item: img.b-price-modal__image.img-responsive(src='https://dummyimage.com/728x90')
+                        .b-price-modal__item: img.b-price-modal__image.img-responsive(src='https://dummyimage.com/728x90')
+                        .b-price-modal__item: img.b-price-modal__image.img-responsive(src='https://dummyimage.com/728x90')
                     .b-price-modal__footer
                         .b-price-modal__features
                             p.b-price-modal__feature — #[b Крутые] гиф-баннеры, плюс плавная анимация каждого кадра.
@@ -338,9 +338,9 @@ block content
                     p.b-price-modal__title Примеры статичных баннеров#[br]по тарифу #[span.b-price-modal__name «Смолл»]
 
                     .b-price-modal__list
-                        .b-price-modal__item: img.b-price-modal__image.img-responsive(src='https://via.placeholder.com/728x90')
-                        .b-price-modal__item: img.b-price-modal__image.img-responsive(src='https://via.placeholder.com/728x90')
-                        .b-price-modal__item: img.b-price-modal__image.img-responsive(src='https://via.placeholder.com/728x90')
+                        .b-price-modal__item: img.b-price-modal__image.img-responsive(src='https://dummyimage.com/728x90')
+                        .b-price-modal__item: img.b-price-modal__image.img-responsive(src='https://dummyimage.com/728x90')
+                        .b-price-modal__item: img.b-price-modal__image.img-responsive(src='https://dummyimage.com/728x90')
                     .b-price-modal__footer
                         .b-price-modal__features
                             p.b-price-modal__feature — #[b Простые] кнопки, очень маленькие баннеры;
@@ -354,9 +354,9 @@ block content
                     p.b-price-modal__title Примеры статичных баннеров#[br]по тарифу #[span.b-price-modal__name «Мидл»]
 
                     .b-price-modal__list
-                        .b-price-modal__item: img.b-price-modal__image.img-responsive(src='https://via.placeholder.com/728x90')
-                        .b-price-modal__item: img.b-price-modal__image.img-responsive(src='https://via.placeholder.com/728x90')
-                        .b-price-modal__item: img.b-price-modal__image.img-responsive(src='https://via.placeholder.com/728x90')
+                        .b-price-modal__item: img.b-price-modal__image.img-responsive(src='https://dummyimage.com/728x90')
+                        .b-price-modal__item: img.b-price-modal__image.img-responsive(src='https://dummyimage.com/728x90')
+                        .b-price-modal__item: img.b-price-modal__image.img-responsive(src='https://dummyimage.com/728x90')
                     .b-price-modal__footer
                         .b-price-modal__features
                             p.b-price-modal__feature — #[b Крутые] статичные баннеры всех стандартных размеров,#[br]которые подойдут для рекламы любого проекта, а также для размещения на любой площадке;
@@ -369,9 +369,9 @@ block content
                     p.b-price-modal__title Примеры статичных баннеров#[br]по тарифу #[span.b-price-modal__name «Биг»]
 
                     .b-price-modal__list
-                        .b-price-modal__item: img.b-price-modal__image.img-responsive(src='https://via.placeholder.com/728x90')
-                        .b-price-modal__item: img.b-price-modal__image.img-responsive(src='https://via.placeholder.com/728x90')
-                        .b-price-modal__item: img.b-price-modal__image.img-responsive(src='https://via.placeholder.com/728x90')
+                        .b-price-modal__item: img.b-price-modal__image.img-responsive(src='https://dummyimage.com/728x90')
+                        .b-price-modal__item: img.b-price-modal__image.img-responsive(src='https://dummyimage.com/728x90')
+                        .b-price-modal__item: img.b-price-modal__image.img-responsive(src='https://dummyimage.com/728x90')
                     .b-price-modal__footer
                         .b-price-modal__features
                             p.b-price-modal__feature — #[b Большие] статичные баннеры для рекламы в социальных сетях, слайдеров на сайте,#[br]а также для особых форматов на рекламных площадках;
