--- a/src/templates/review.jade
+++ b/src/templates/review.jade
@@ -13,7 +13,7 @@ block content
 
                     .b-review-image
                         .b-review-image__container
-                            img.b-review-image__img(src='https://via.placeholder.com/519x731', alt='Review image')
+                            img.b-review-image__img(src='https://dummyimage.com/519x731', alt='Review image')
 
                     .b-review__content
                         .b-review__text
