--- a/src/templates/reviews.jade
+++ b/src/templates/reviews.jade
@@ -36,7 +36,7 @@ block content
                         .text-center: span.b-reviews__title 1ДСКиКО
                     .b-reviews__content
                         .b-reviews__media_video
-                            .b-reviews__link(href='http://www.youtube.com/watch?v=opj24KnzrWo'): img.img-responsive(src='https://via.placeholder.com/320x180')
+                            .b-reviews__link(href='http://www.youtube.com/watch?v=opj24KnzrWo'): img.img-responsive(src='https://dummyimage.com/320x180')
                     .b-reviews__footer
                         span.b-reviews__date 22.06.2016
                         span.b-reviews__type Видеоотзывы
@@ -45,7 +45,7 @@ block content
                         .text-center: span.b-reviews__title Газелькин
                     .b-reviews__content.b-reviews__content_type_image
                         .b-reviews__media_image
-                            .b-reviews__link(href='#review_1', data-url="https://via.placeholder.com/196x264"): img.img-responsive(src='https://via.placeholder.com/196x264')
+                            .b-reviews__link(href='#review_1', data-url="https://dummyimage.com/196x264"): img.img-responsive(src='https://dummyimage.com/196x264')
                     .b-reviews__footer
                         span.b-reviews__date 22.06.2016
                         span.b-reviews__type Рекомендации
@@ -124,4 +124,4 @@ block content
             #review_1
                 .b-review-image
                     .b-review-image__container
-                        img(src="https://via.placeholder.com/519x731", alt="")
+                        img(src="https://dummyimage.com/519x731", alt="")
