--- a/src/templates/index.jade
+++ b/src/templates/index.jade
@@ -129,7 +129,7 @@ block content
                         .text-center: span.b-reviews__title 1ДСКиКО
                     .b-reviews__content
                         .b-reviews__media_video
-                            .b-reviews__link(href='http://www.youtube.com/watch?v=opj24KnzrWo'): img.img-responsive(src='https://via.placeholder.com/320x180')
+                            .b-reviews__link(href='http://www.youtube.com/watch?v=opj24KnzrWo'): img.img-responsive(src='https://dummyimage.com/320x180')
                     .b-reviews__footer
                         span.b-reviews__date 22.06.2016
                         span.b-reviews__type Видеоотзывы
@@ -138,7 +138,7 @@ block content
                         .text-center: span.b-reviews__title Газелькин
                     .b-reviews__content.b-reviews__content_type_image
                         .b-reviews__media_image
-                            .b-reviews__link(href='#review_1', data-url="https://via.placeholder.com/196x264"): img.img-responsive(src='https://via.placeholder.com/196x264')
+                            .b-reviews__link(href='#review_1', data-url="https://dummyimage.com/196x264"): img.img-responsive(src='https://dummyimage.com/196x264')
                     .b-reviews__footer
                         span.b-reviews__date 22.06.2016
                         span.b-reviews__type Рекомендации
@@ -300,7 +300,7 @@ block content
             #review_1
                 .b-review-image
                     .b-review-image__container
-                        img(src="https://via.placeholder.com/519x731", alt="")
+                        img(src="https://dummyimage.com/519x731", alt="")
             #portfolio_1(style='width:1080px;padding:0 40px')
                 h1.b-page__title #[a.b-page__link(href="#") Флеш-баннер] для #[a.b-page__link(href="client.html") Exante] “Лучший брокер”
 
@@ -320,16 +320,16 @@ block content
                             .tab-content
                                 #banner_language_ru_size_240_400.tab-pane.active(role="tabpanel")
                                     .b-portfolio-item__view
-                                        img.b-portfolio-item__image.img-responsive(src='https://via.placeholder.com/970x90', alt='')
+                                        img.b-portfolio-item__image.img-responsive(src='https://dummyimage.com/970x90', alt='')
                                 #banner_language_ru_size_100_100.tab-pane(role="tabpanel")
                                     .b-portfolio-item__view
-                                        img.b-portfolio-item__image.img-responsive(src='https://via.placeholder.com/100x100', alt='')
+                                        img.b-portfolio-item__image.img-responsive(src='https://dummyimage.com/100x100', alt='')
                                 #banner_language_ru_size_200_300.tab-pane(role="tabpanel")
                                     .b-portfolio-item__view
-                                        img.b-portfolio-item__image.img-responsive(src='https://via.placeholder.com/1200x300', alt='')
+                                        img.b-portfolio-item__image.img-responsive(src='https://dummyimage.com/1200x300', alt='')
                                 #banner_language_ru_size_160_600.tab-pane(role="tabpanel")
                                     .b-portfolio-item__view
-                                        img.b-portfolio-item__image.img-responsive(src='https://via.placeholder.com/160x600', alt='')
+                                        img.b-portfolio-item__image.img-responsive(src='https://dummyimage.com/160x600', alt='')
                         #banner_language_en.tab-pane(role="tabpanel")
                             ul.b-size-tabs
                                 li.b-size-tabs__item.active(role="presentation"): a.b-size-tabs__link(href='#banner_language_en_size_240_400', aria-controls="banner_language_en_size_240_400", role="tab", data-toggle="tab") 240#[span.b-size-tabs__divider x]400
@@ -339,16 +339,16 @@ block content
                             .tab-content
                                 #banner_language_en_size_240_400.tab-pane.active(role="tabpanel")
                                     .b-portfolio-item__view
-                                        img.b-portfolio-item__image.img-responsive(src='https://via.placeholder.com/970x90', alt='')
+                                        img.b-portfolio-item__image.img-responsive(src='https://dummyimage.com/970x90', alt='')
                                 #banner_language_en_size_100_100.tab-pane(role="tabpanel")
                                     .b-portfolio-item__view
-                                        img.b-portfolio-item__image.img-responsive(src='https://via.placeholder.com/100x100', alt='')
+                                        img.b-portfolio-item__image.img-responsive(src='https://dummyimage.com/100x100', alt='')
                                 #banner_language_en_size_200_300.tab-pane(role="tabpanel")
                                     .b-portfolio-item__view
-                                        img.b-portfolio-item__image.img-responsive(src='https://via.placeholder.com/200x300', alt='')
+                                        img.b-portfolio-item__image.img-responsive(src='https://dummyimage.com/200x300', alt='')
                                 #banner_language_en_size_160_600.tab-pane(role="tabpanel")
                                     .b-portfolio-item__view
-                                        img.b-portfolio-item__image.img-responsive(src='https://via.placeholder.com/160x600', alt='')
+                                        img.b-portfolio-item__image.img-responsive(src='https://dummyimage.com/160x600', alt='')
                     .b-portfolio-item__lead
                         .row
                             .col-xs-8
@@ -444,16 +444,16 @@ block content
                             .tab-content
                                 #banner_language_ru_size_240_400.tab-pane.active(role="tabpanel")
                                     .b-portfolio-item__view
-                                        img.b-portfolio-item__image.img-responsive(src='https://via.placeholder.com/970x90', alt='')
+                                        img.b-portfolio-item__image.img-responsive(src='https://dummyimage.com/970x90', alt='')
                                 #banner_language_ru_size_100_100.tab-pane(role="tabpanel")
                                     .b-portfolio-item__view
-                                        img.b-portfolio-item__image.img-responsive(src='https://via.placeholder.com/100x100', alt='')
+                                        img.b-portfolio-item__image.img-responsive(src='https://dummyimage.com/100x100', alt='')
                                 #banner_language_ru_size_200_300.tab-pane(role="tabpanel")
                                     .b-portfolio-item__view
-                                        img.b-portfolio-item__image.img-responsive(src='https://via.placeholder.com/1200x300', alt='')
+                                        img.b-portfolio-item__image.img-responsive(src='https://dummyimage.com/1200x300', alt='')
                                 #banner_language_ru_size_160_600.tab-pane(role="tabpanel")
                                     .b-portfolio-item__view
-                                        img.b-portfolio-item__image.img-responsive(src='https://via.placeholder.com/160x600', alt='')
+                                        img.b-portfolio-item__image.img-responsive(src='https://dummyimage.com/160x600', alt='')
                         #banner_language_en.tab-pane(role="tabpanel")
                             ul.b-size-tabs
                                 li.b-size-tabs__item.active(role="presentation"): a.b-size-tabs__link(href='#banner_language_en_size_240_400', aria-controls="banner_language_en_size_240_400", role="tab", data-toggle="tab") 240#[span.b-size-tabs__divider x]400
@@ -463,16 +463,16 @@ block content
                             .tab-content
                                 #banner_language_en_size_240_400.tab-pane.active(role="tabpanel")
                                     .b-portfolio-item__view
-                                        img.b-portfolio-item__image.img-responsive(src='https://via.placeholder.com/970x90', alt='')
+                                        img.b-portfolio-item__image.img-responsive(src='https://dummyimage.com/970x90', alt='')
                                 #banner_language_en_size_100_100.tab-pane(role="tabpanel")
                                     .b-portfolio-item__view
-                                        img.b-portfolio-item__image.img-responsive(src='https://via.placeholder.com/100x100', alt='')
+                                        img.b-portfolio-item__image.img-responsive(src='https://dummyimage.com/100x100', alt='')
                                 #banner_language_en_size_200_300.tab-pane(role="tabpanel")
                                     .b-portfolio-item__view
-                                        img.b-portfolio-item__image.img-responsive(src='https://via.placeholder.com/200x300', alt='')
+                                        img.b-portfolio-item__image.img-responsive(src='https://dummyimage.com/200x300', alt='')
                                 #banner_language_en_size_160_600.tab-pane(role="tabpanel")
                                     .b-portfolio-item__view
-                                        img.b-portfolio-item__image.img-responsive(src='https://via.placeholder.com/160x600', alt='')
+                                        img.b-portfolio-item__image.img-responsive(src='https://dummyimage.com/160x600', alt='')
                     .b-portfolio-item__lead
                         .row
                             .col-xs-8
