--- a/src/templates/portfolio_item.jade
+++ b/src/templates/portfolio_item.jade
@@ -32,7 +32,7 @@ block content
                                 .b-portfolio-item__view
                                     .b-portfolio-item__border(style="width:1100px;height:90px;border:5px solid black;margin-top:-5px;")
                                     .b-portfolio-item__scroll.scrollbar-light
-                                        img.b-portfolio-item__image(src='https://via.placeholder.com/1100x90', alt='')
+                                        img.b-portfolio-item__image(src='https://dummyimage.com/1100x90', alt='')
                             #banner_language_ru_size_100_100.tab-pane(role="tabpanel")
                                 .b-portfolio-item__view
                                     .b-portfolio-item__border(style="width:728px;height:90px;border:5px solid black;margin-top:-5px;")
@@ -42,11 +42,11 @@ block content
                                             .b-iframe-scroll__fix
                             #banner_language_ru_size_200_300.tab-pane(role="tabpanel")
                                 .b-portfolio-item__view
-                                    img.b-portfolio-item__image.img-responsive(src='https://via.placeholder.com/1200x300', alt='')
+                                    img.b-portfolio-item__image.img-responsive(src='https://dummyimage.com/1200x300', alt='')
                             #banner_language_ru_size_160_600.tab-pane(role="tabpanel")
                                 .b-portfolio-item__view
                                     .b-portfolio-item__border(style="width:160px;height:600px;border:5px solid black;margin-top:-5px;")
-                                    img.b-portfolio-item__image.img-responsive(src='https://via.placeholder.com/160x600', alt='')
+                                    img.b-portfolio-item__image.img-responsive(src='https://dummyimage.com/160x600', alt='')
                             #banner_language_ru_size_300_300.tab-pane(role="tabpanel")
                                 .b-portfolio-item__view
                                     video.b-portfolio-item__video(preload='auto', controls, loop, controlsList="nodownload", src="https://s1.2myshows.me:8443/12.monkeys/s01/12.Monkeys.S01E01.1080p.rus.LostFilm.TV.360p.mp4")
@@ -62,16 +62,16 @@ block content
                         .tab-content
                             #banner_language_en_size_240_400.tab-pane.active(role="tabpanel")
                                 .b-portfolio-item__view
-                                    img.b-portfolio-item__image.img-responsive(src='https://via.placeholder.com/970x90', alt='')
+                                    img.b-portfolio-item__image.img-responsive(src='https://dummyimage.com/970x90', alt='')
                             #banner_language_en_size_100_100.tab-pane(role="tabpanel")
                                 .b-portfolio-item__view
-                                    img.b-portfolio-item__image.img-responsive(src='https://via.placeholder.com/100x100', alt='')
+                                    img.b-portfolio-item__image.img-responsive(src='https://dummyimage.com/100x100', alt='')
                             #banner_language_en_size_200_300.tab-pane(role="tabpanel")
                                 .b-portfolio-item__view
-                                    img.b-portfolio-item__image.img-responsive(src='https://via.placeholder.com/200x300', alt='')
+                                    img.b-portfolio-item__image.img-responsive(src='https://dummyimage.com/200x300', alt='')
                             #banner_language_en_size_160_600.tab-pane(role="tabpanel")
                                 .b-portfolio-item__view
-                                    img.b-portfolio-item__image.img-responsive(src='https://via.placeholder.com/160x600', alt='')
+                                    img.b-portfolio-item__image.img-responsive(src='https://dummyimage.com/160x600', alt='')
                 .b-portfolio-item__date 2 марта 2016
                 .b-portfolio-tag-outer.b-portfolio-tag-outer_detailview
                     a.js-portfolio-tag.b-portfolio-tag.b-portfolio-tag_image(data-tag-background='#ffffff', data-tag-background-hover='#ff0000', data-tag-color='', data-tag-color-hover='', style='background:#ffffff;', href='#')
