--- a/src/templates/portfolio_type_3.jade
+++ b/src/templates/portfolio_type_3.jade
@@ -87,16 +87,16 @@ block content
                             .tab-content
                                 #banner_language_ru_size_240_400.tab-pane.active(role="tabpanel")
                                     .b-portfolio-item__view
-                                        img.b-portfolio-item__image.img-responsive(src='https://via.placeholder.com/970x90', alt='')
+                                        img.b-portfolio-item__image.img-responsive(src='https://dummyimage.com/970x90', alt='')
                                 #banner_language_ru_size_100_100.tab-pane(role="tabpanel")
                                     .b-portfolio-item__view
-                                        img.b-portfolio-item__image.img-responsive(src='https://via.placeholder.com/100x100', alt='')
+                                        img.b-portfolio-item__image.img-responsive(src='https://dummyimage.com/100x100', alt='')
                                 #banner_language_ru_size_200_300.tab-pane(role="tabpanel")
                                     .b-portfolio-item__view
-                                        img.b-portfolio-item__image.img-responsive(src='https://via.placeholder.com/1200x300', alt='')
+                                        img.b-portfolio-item__image.img-responsive(src='https://dummyimage.com/1200x300', alt='')
                                 #banner_language_ru_size_160_600.tab-pane(role="tabpanel")
                                     .b-portfolio-item__view
-                                        img.b-portfolio-item__image.img-responsive(src='https://via.placeholder.com/160x600', alt='')
+                                        img.b-portfolio-item__image.img-responsive(src='https://dummyimage.com/160x600', alt='')
                         #banner_language_en.tab-pane(role="tabpanel")
                             ul.b-size-tabs
                                 li.b-size-tabs__item.active(role="presentation"): a.b-size-tabs__link(href='#banner_language_en_size_240_400', aria-controls="banner_language_en_size_240_400", role="tab", data-toggle="tab") 240#[span.b-size-tabs__divider x]400
@@ -106,16 +106,16 @@ block content
                             .tab-content
                                 #banner_language_en_size_240_400.tab-pane.active(role="tabpanel")
                                     .b-portfolio-item__view
-                                        img.b-portfolio-item__image.img-responsive(src='https://via.placeholder.com/970x90', alt='')
+                                        img.b-portfolio-item__image.img-responsive(src='https://dummyimage.com/970x90', alt='')
                                 #banner_language_en_size_100_100.tab-pane(role="tabpanel")
                                     .b-portfolio-item__view
-                                        img.b-portfolio-item__image.img-responsive(src='https://via.placeholder.com/100x100', alt='')
+                                        img.b-portfolio-item__image.img-responsive(src='https://dummyimage.com/100x100', alt='')
                                 #banner_language_en_size_200_300.tab-pane(role="tabpanel")
                                     .b-portfolio-item__view
-                                        img.b-portfolio-item__image.img-responsive(src='https://via.placeholder.com/200x300', alt='')
+                                        img.b-portfolio-item__image.img-responsive(src='https://dummyimage.com/200x300', alt='')
                                 #banner_language_en_size_160_600.tab-pane(role="tabpanel")
                                     .b-portfolio-item__view
-                                        img.b-portfolio-item__image.img-responsive(src='https://via.placeholder.com/160x600', alt='')
+                                        img.b-portfolio-item__image.img-responsive(src='https://dummyimage.com/160x600', alt='')
                     .b-portfolio-item__lead
                         .row
                             .col-xs-8
@@ -196,16 +196,16 @@ block content
                             .tab-content
                                 #banner_language_ru_size_240_400.tab-pane.active(role="tabpanel")
                                     .b-portfolio-item__view
-                                        img.b-portfolio-item__image.img-responsive(src='https://via.placeholder.com/970x90', alt='')
+                                        img.b-portfolio-item__image.img-responsive(src='https://dummyimage.com/970x90', alt='')
                                 #banner_language_ru_size_100_100.tab-pane(role="tabpanel")
                                     .b-portfolio-item__view
-                                        img.b-portfolio-item__image.img-responsive(src='https://via.placeholder.com/100x100', alt='')
+                                        img.b-portfolio-item__image.img-responsive(src='https://dummyimage.com/100x100', alt='')
                                 #banner_language_ru_size_200_300.tab-pane(role="tabpanel")
                                     .b-portfolio-item__view
-                                        img.b-portfolio-item__image.img-responsive(src='https://via.placeholder.com/1200x300', alt='')
+                                        img.b-portfolio-item__image.img-responsive(src='https://dummyimage.com/1200x300', alt='')
                                 #banner_language_ru_size_160_600.tab-pane(role="tabpanel")
                                     .b-portfolio-item__view
-                                        img.b-portfolio-item__image.img-responsive(src='https://via.placeholder.com/160x600', alt='')
+                                        img.b-portfolio-item__image.img-responsive(src='https://dummyimage.com/160x600', alt='')
                         #banner_language_en.tab-pane(role="tabpanel")
                             ul.b-size-tabs
                                 li.b-size-tabs__item.active(role="presentation"): a.b-size-tabs__link(href='#banner_language_en_size_240_400', aria-controls="banner_language_en_size_240_400", role="tab", data-toggle="tab") 240#[span.b-size-tabs__divider x]400
@@ -215,16 +215,16 @@ block content
                             .tab-content
                                 #banner_language_en_size_240_400.tab-pane.active(role="tabpanel")
                                     .b-portfolio-item__view
-                                        img.b-portfolio-item__image.img-responsive(src='https://via.placeholder.com/970x90', alt='')
+                                        img.b-portfolio-item__image.img-responsive(src='https://dummyimage.com/970x90', alt='')
                                 #banner_language_en_size_100_100.tab-pane(role="tabpanel")
                                     .b-portfolio-item__view
-                                        img.b-portfolio-item__image.img-responsive(src='https://via.placeholder.com/100x100', alt='')
+                                        img.b-portfolio-item__image.img-responsive(src='https://dummyimage.com/100x100', alt='')
                                 #banner_language_en_size_200_300.tab-pane(role="tabpanel")
                                     .b-portfolio-item__view
-                                        img.b-portfolio-item__image.img-responsive(src='https://via.placeholder.com/200x300', alt='')
+                                        img.b-portfolio-item__image.img-responsive(src='https://dummyimage.com/200x300', alt='')
                                 #banner_language_en_size_160_600.tab-pane(role="tabpanel")
                                     .b-portfolio-item__view
-                                        img.b-portfolio-item__image.img-responsive(src='https://via.placeholder.com/160x600', alt='')
+                                        img.b-portfolio-item__image.img-responsive(src='https://dummyimage.com/160x600', alt='')
                     .b-portfolio-item__lead
                         .row
                             .col-xs-8
