--- a/src/templates/review_ajax.jade
+++ b/src/templates/review_ajax.jade
@@ -9,7 +9,7 @@
 
             .b-review-image
                 .b-review-image__container
-                    img.b-review-image__img(src='https://via.placeholder.com/519x731', alt='Review image')
+                    img.b-review-image__img(src='https://dummyimage.com/519x731', alt='Review image')
 
             .b-review__content
                 .b-review__text
