--- a/src/templates/vacancies.jade
+++ b/src/templates/vacancies.jade
@@ -32,13 +32,13 @@ block content
                     p.b-vacancies-features__text Учимся новому, делимся опытом между собой.
             .b-slider
                 .b-slider__item
-                    img.img-responsive(src='https://via.placeholder.com/1000x450')
+                    img.img-responsive(src='https://dummyimage.com/1000x450')
                 .b-slider__item
-                    img.img-responsive(src='https://via.placeholder.com/1000x450')
+                    img.img-responsive(src='https://dummyimage.com/1000x450')
                 .b-slider__item
-                    img.img-responsive(src='https://via.placeholder.com/1000x450')
+                    img.img-responsive(src='https://dummyimage.com/1000x450')
                 .b-slider__item
-                    img.img-responsive(src='https://via.placeholder.com/1000x450')
+                    img.img-responsive(src='https://dummyimage.com/1000x450')
 
             .b-text.g-mb60
                 p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla accumsan vitae nunc ac eleifend. Duis faucibus sollicitudin condimentum. Ut viverra placerat luctus. Nam vulputate egestas ex nec blandit. Integer feugiat nisi id mauris commodo lacinia. Aliquam erat volutpat. Donec dui turpis, condimentum eu ante et, porttitor malesuada erat. Morbi imperdiet diam id consectetur hendrerit. Ut id ullamcorper libero. Integer porttitor iaculis elit, nec condimentum neque accumsan et. Maecenas quam lacus, mattis id tellus eget, porta aliquam tellus. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Cras laoreet nunc felis, id fringilla risus auctor non. Fusce nec ornare eros. Mauris malesuada urna orci, in tincidunt tortor auctor sit amet.
@@ -52,11 +52,11 @@ block content
                     a.b-vacancies__item(href='vacancy.html')
                         p.b-vacancies__title Web-дизайнер
 
-                        img.img-responsive.b-vacancies__image(src='https://via.placeholder.com/900x360')
+                        img.img-responsive.b-vacancies__image(src='https://dummyimage.com/900x360')
                     a.b-vacancies__item(href='vacancy.html')
                         p.b-vacancies__title Бухгалтер
 
-                        img.img-responsive.b-vacancies__image(src='https://via.placeholder.com/900x360')
+                        img.img-responsive.b-vacancies__image(src='https://dummyimage.com/900x360')
 
         .hidden
             .b-modal-form#vacancy_form
