--- a/src/assets/fonts/stylesheet.css
+++ b/src/assets/fonts/stylesheet.css
@@ -4,10 +4,10 @@
 
 @font-face {
     font-family: 'Craftwork';
-    src: url('craftworkgrotesk-bold-webfont.eot');
-    src: url('craftworkgrotesk-bold-webfont.eot?#iefix') format('embedded-opentype'),
-         url('craftworkgrotesk-bold-webfont.woff2') format('woff2'),
-         url('craftworkgrotesk-bold-webfont.woff') format('woff');
+    src: url('CraftworkGrotesk-Bold.eot');
+    src: url('CraftworkGrotesk-Bold.eot?#iefix') format('embedded-opentype'),
+         url('CraftworkGrotesk-Bold.woff2') format('woff2'),
+         url('CraftworkGrotesk-Bold.woff') format('woff');
     font-weight: 700;
     font-style: normal;
 
@@ -18,10 +18,10 @@
 
 @font-face {
     font-family: 'Craftwork';
-    src: url('craftworkgrotesk-heavy-webfont.eot');
-    src: url('craftworkgrotesk-heavy-webfont.eot?#iefix') format('embedded-opentype'),
-         url('craftworkgrotesk-heavy-webfont.woff2') format('woff2'),
-         url('craftworkgrotesk-heavy-webfont.woff') format('woff');
+    src: url('CraftworkGrotesk-Heavy.eot');
+    src: url('CraftworkGrotesk-Heavy.eot?#iefix') format('embedded-opentype'),
+         url('CraftworkGrotesk-Heavy.woff2') format('woff2'),
+         url('CraftworkGrotesk-Heavy.woff') format('woff');
     font-weight: 800;
     font-style: normal;
 }
@@ -30,10 +30,10 @@
 
 @font-face {
     font-family: 'Craftwork';
-    src: url('craftworksans-medium-webfont.eot');
-    src: url('craftworksans-medium-webfont.eot?#iefix') format('embedded-opentype'),
-         url('craftworksans-medium-webfont.woff2') format('woff2'),
-         url('craftworksans-medium-webfont.woff') format('woff');
+    src: url('CraftworkSans-Medium.eot');
+    src: url('CraftworkSans-Medium.eot?#iefix') format('embedded-opentype'),
+         url('CraftworkSans-Medium.woff2') format('woff2'),
+         url('CraftworkSans-Medium.woff') format('woff');
     font-weight: 500;
     font-style: normal;
 }
@@ -43,10 +43,10 @@
 
 @font-face {
     font-family: 'Craftwork';
-    src: url('craftworksans-regular-webfont.eot');
-    src: url('craftworksans-regular-webfont.eot?#iefix') format('embedded-opentype'),
-         url('craftworksans-regular-webfont.woff2') format('woff2'),
-         url('craftworksans-regular-webfont.woff') format('woff');
+    src: url('CraftworkSans-Regular.eot');
+    src: url('CraftworkSans-Regular.eot?#iefix') format('embedded-opentype'),
+         url('CraftworkSans-Regular.woff2') format('woff2'),
+         url('CraftworkSans-Regular.woff') format('woff');
     font-weight: 400;
     font-style: normal;
 }
@@ -56,10 +56,10 @@
 
 @font-face {
     font-family: 'Craftwork';
-    src: url('craftworksans-semibold-webfont.eot');
-    src: url('craftworksans-semibold-webfont.eot?#iefix') format('embedded-opentype'),
-         url('craftworksans-semibold-webfont.woff2') format('woff2'),
-         url('craftworksans-semibold-webfont.woff') format('woff');
+    src: url('CraftworkSans-Semibold.eot');
+    src: url('CraftworkSans-Semibold.eot?#iefix') format('embedded-opentype'),
+         url('CraftworkSans-Semibold.woff2') format('woff2'),
+         url('CraftworkSans-Semibold.woff') format('woff');
     font-weight: 600;
     font-style: normal;
 }
