--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,11 +1,46 @@
+@import "../fonts/stylesheet.css";
+
 @layer theme, base, components, utilities;
-@import "tailwindcss/theme.css" layer(theme);
+@import "tailwindcss/theme.css";
 /* @import "tailwindcss/preflight.css" layer(base); */
-@import "tailwindcss/utilities.css" layer(utilities);
+@import "tailwindcss/utilities.css";
+
+/*@layer theme, base, components, utilities;*/
+/*@import "tailwindcss/theme.css" layer(theme);*/
+/*!* @import "tailwindcss/preflight.css" layer(base); *!*/
+/*@import "tailwindcss/utilities.css" layer(utilities);*/
+
+/* Components */
+@import "./icons.css" layer(components);
+@import "./forms.css" layer(components);
+@import "../blocks/b-cta/cta.css" layer(components);
 
 @theme {
-    --font-sans: 'Craftwork Sans', 'system-ui', 'Helvetica', 'Arial', 'sans-serif';
-    --font-serif: 'Craftwork Grotesk', serif;
+    --font-sans: 'Craftwork Sans', ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+    --font-serif: 'Craftwork Grotesk', ui-serif, Georgia, Cambria, 'Times New Roman', Times, serif;
+    --font-glina: 'Glina Script', sans-serif;
+
+    --text-tiny: 0.625rem;
+    --text-tiny--line-height: 0.875rem;
+    --text-tiny--font-weight: 600;
+
+    --color-blue-600: #2856F6;
+    --color-blue-620: #2E55DB;
+    --color-blue-680: #2146C4;
+    --color-blue-900: #161F6A;
+
+    --color-red-500: #FD324A;
+
+    --color-slate-40: #F4F6FA;
+    --color-slate-430: #8187AD;
+
+    --color-indigo-50: #E2E9FF;
+    --color-indigo-100: #E5EBFF;
+
+    --radius-20: 20px;
+    --radius-28: 28px;
+
+    --default-transition-duration: .3s;
 
     --breakpoint-sm: 40rem;   /* 640px  */
     --breakpoint-md: 48rem;   /* 768px  */
@@ -23,6 +58,8 @@
     --container-3xl: 1520px;  /* 1600px */
     --container-4xl: 1800px;  /* 1520px */
 }
+
+@source inline('bg-slate-40');
 
 @layer utilities {
     .container {
@@ -45,6 +82,18 @@
 
 html {
     font-size: 16px;
+}
+
+.visually-hidden {
+    position: absolute !important;
+    width: 1px !important;
+    height: 1px !important;
+    padding: 0 !important;
+    margin: -1px !important;
+    overflow: hidden !important;
+    clip: rect(0 0 0 0) !important;
+    white-space: nowrap !important;
+    border: 0 !important;
 }
 
 @config "../../tailwind.config.js";
