--- a/src/css/main.css
+++ b/src/css/main.css
@@ -32,9 +32,15 @@
     --color-blue-680: #2146C4;
     --color-blue-900: #161F6A;
 
-    --color-purple-500: #AB67FE;
+    --color-purple-50: #F6EFFF;
+    --color-purple-300: #C08DFE;
+    --color-purple-400: #AB67FE;
+    --color-purple-500: #9A47FF;
 
+    --color-lime-50: #F8FFE5;
+    --color-lime-400: #C2FE0E;
     --color-lime-500: #A8E000;
+    --color-lime-600: #9BCF00;
 
     --color-red-500: #FD324A;
 
